Added doc for image uploading, fixed errors
